# ai-customer-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: api.md  architecture.md  deployment.md
docs/module-guides/: memory.md  pipeline.md  rag.md  security.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_sync_models.py
scripts/: init_db.py  upload_knowledge.py
src/app/: config.py  db.py  main.py
src/app/api/: deps.py
src/app/api/v1/: __init__.py  admin.py  auth.py  chat.py  knowledge.py
src/app/core/: exceptions.py  logging.py  metrics.py  middleware.py  rate_limit.py  security.py
src/app/models/: __init__.py  audit_log.py  base.py  knowledge_chunk.py  knowledge_doc.py  message.py  session.py  user.py  user_profile.py
src/app/pipeline/: __init__.py  context.py  runner.py
src/app/pipeline/stages/: __init__.py  _llm_json.py  base.py  content_guard.py  (+6 more)
src/app/repositories/: __init__.py  audit_log_repository.py  base.py  document_repository.py  knowledge_chunk_repository.py  message_repository.py  profile_repository.py  session_repository.py  user_repository.py
src/app/schemas/: __init__.py  admin.py  auth.py  chat.py  common.py  knowledge.py
src/app/services/: __init__.py  embedding_service.py  llm.py  memory_service.py  rag_service.py
src/app/tools/: __init__.py  base.py  push_card.py  query_order.py  transfer_human.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_auth.py  test_chat.py  test_health.py  test_knowledge.py
tests/unit/: __init__.py  test_config.py  test_content_guard.py  test_input_parser.py  test_intent_classifier.py  test_memory_service.py  test_pipeline_context.py  test_rag_service.py  test_security.py  test_strategy_injector.py  test_tools.py
