[project]
name = "ai-customer-service"
version = "0.1.0"
description = "Enterprise-grade AI voice & text customer service backend powered by Volcengine Ark (DeepSeek)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "keweixin" }]
dependencies = [
    # Web 框架
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # HTTP 客户端(调 LLM API)
    "httpx>=0.27.0",
    # 配置管理
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.4",
    # 鉴权
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    # 限流
    "slowapi>=0.1.9",
    # 日志
    "structlog>=24.1.0",
    # 监控
    "prometheus-client>=0.20.0",
    # 工具
    "python-multipart>=0.0.9",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-pyjwt",
    "aiosqlite>=0.20.0",  # 测试用 SQLite
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/app --cov-report=term-missing --cov-report=html"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TID"]
ignore = ["E501"]  # 行长由 formatter 管

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
